--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             <br>
             <h5><strong>SUMMARY</strong></h5>
-            <p>Software engineer with 1 year experience in C, C++ and Python. Still studying. Communucative person.<br>Interested in apprenticeship.</p>
+            <p>Software engineer with 1 year experience in C, C++ and Python. Still studying. Communucative person.<br></p>
 
             <br>
             <h5><strong>EDUCATION</strong></h5>
@@ -34,12 +34,33 @@
             <p>Location: Moldova, Chisinau<br>CEEE (CENTRUL DE EXCELENȚĂ ÎN ENERGETICĂ ȘI ELECTRONICĂ)
             <br>
             61110 — CALCULATOARE</p>
+            <br>
+
+            <h6>2020 - Until now</h6>
+            <p>Location: Moldova, Chisinau<br>TUM (Technical University of Moldova)
+            <br>
+            Information Technology
+            </p>
+
+            <br>
+            <h5><strong>EXPERIENCE</strong></h5>
+            <h6>2020 - Until now</h6>
+            <p>Location: Moldova, Chisinau<br>SmartSoftDev<br>Position - Software engineer</p>
+            
 
             <br>
             <h5><strong>SKILLS</strong></h5>
-            <h2><span class="badge badge-success">C</span> <span class="badge badge-success">C++</span> <span class="badge badge-success">git </span></h2>
-            <h3><span class="badge badge-primary">🐍 Python3 (Django)</span> <span class="badge badge-warning">🐧 Linux</span></h3>
+            <h2><span class="badge badge-success">C</span> 
+                <span class="badge badge-success">C++ (Boost, OpenSSL, glog, nlohmann json)</span> 
+                <span class="badge badge-success">git</span></h2>
+            <h3><span class="badge badge-primary">🐍 Python3 (Django)</span> 
+                <span class="badge badge-primary">Go</span>
+                <span class="badge badge-warning">🐧 Linux</span></h3>
             <h4><span class="badge badge-primary" style="background-color:teal">SQLite3</span></h4>
+            <h5><span class="badge badge-primary" style="background-color:burlywood">HTML</span> 
+                <span class="badge badge-primary" style="background-color:burlywood">CSS</span> 
+                <span class="badge badge-primary" style="background-color:burlywood">Bootstrap</span></h5>
+            <br>
         </div>
     </body>
 </html>
