--- a/ru/index.html
+++ b/ru/index.html
@@ -26,7 +26,7 @@
 
             <br>
             <h5><strong>ОБО МНЕ</strong></h5>
-            <p>Разработчик программного обеспечения. Студент. Коммуникабельный.<br>Заинтерисован в оплачиваемой стажировке.</p>
+            <p>Разработчик программного обеспечения. Студент. Коммуникабельный.<br></p>
 
             <br>
             <h5><strong>ОБРАЗОВАНИЕ</strong></h5>
@@ -35,11 +35,29 @@
             <br>
             61110 — CALCULATOARE</p>
 
+            <h6>2020 - н.в.</h6>
+            <p>Moldova, Chisinau<br>UTM (Universitatea Tehnică a Moldovei)
+            <br>
+            Tehnologia Informației
+            </p>
+
+            <br>
+            <h5><strong>ОПЫТ</strong></h5>
+            <h6>2020 - н.в.</h6>
+            <p>Moldova, Chisinau<br>SmartSoftDev<br>Должность - Программный инженер</p>
+
             <br>
             <h5><strong>НАВЫКИ</strong></h5>
-            <h2><span class="badge badge-success">C</span> <span class="badge badge-success">C++</span> <span class="badge badge-success">git </span></h2>
-            <h3><span class="badge badge-primary">🐍 Python3 (Django)</span> <span class="badge badge-warning">🐧 Linux</span></h3>
+            <h2><span class="badge badge-success">C</span> 
+                <span class="badge badge-success">C++ (Boost, OpenSSL, glog, nlohmann json)</span> 
+                <span class="badge badge-success">git</span></h2>
+            <h3><span class="badge badge-primary">🐍 Python3 (Django)</span> 
+                <span class="badge badge-primary">Go</span>
+                <span class="badge badge-warning">🐧 Linux</span></h3>
             <h4><span class="badge badge-primary" style="background-color:teal">SQLite3</span></h4>
+            <h5><span class="badge badge-primary" style="background-color:burlywood">HTML</span> 
+                <span class="badge badge-primary" style="background-color:burlywood">CSS</span> 
+                <span class="badge badge-primary" style="background-color:burlywood">Bootstrap</span></h5>
         </div>
     </body>
 </html>
