--- a/404.html
+++ b/404.html
@@ -43,6 +43,15 @@
             </p>
 
             <br>
+            <h5><strong>LANGUAGES</strong></h5>
+            <h6>English</h6>
+            <p>Level: B2<br>TOEFL iBT score: 93<br></p>
+            <h6>Russian<br></h6>
+            <p>Native language<br></p>
+            <h6>Romanian</h6>
+            <p>Level: A1<br></p>
+
+            <br>
             <h5><strong>EXPERIENCE</strong></h5>
             <h6>2020 - Until now</h6>
             <p>Location: Moldova, Chisinau<br>SmartSoftDev<br>Position - Software engineer</p>
