--- a/index.html
+++ b/index.html
@@ -42,6 +42,17 @@
             Information Technology
             </p>
 
+
+            <br>
+            <h5><strong>LANGUAGES</strong></h5>
+            <h6>English</h6>
+            <p>Level: B2<br>TOEFL iBT score: 93<br></p>
+            <h6>Russian<br></h6>
+            <p>Native language<br></p>
+            <h6>Romanian</h6>
+            <p>Level: A1<br></p>
+
+
             <br>
             <h5><strong>EXPERIENCE</strong></h5>
             <h6>2020 - Until now</h6>
