--- a/ru/404.html
+++ b/ru/404.html
@@ -42,6 +42,15 @@
             </p>
 
             <br>
+            <h5><strong>ЯЗЫКИ</strong></h5>
+            <h6>Английский</h6>
+            <p>Уровень: B2<br>TOEFL iBT балл: 93<br></p>
+            <h6>Русский<br></h6>
+            <p>Родной язык<br></p>
+            <h6>Румынский</h6>
+            <p>Уровень: A1<br></p>
+
+            <br>
             <h5><strong>ОПЫТ</strong></h5>
             <h6>2020 - н.в.</h6>
             <p>Moldova, Chisinau<br>SmartSoftDev<br>Должность - Программный инженер</p>
