--- a/index.html
+++ b/index.html
@@ -1,77 +1,107 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" lang="en">
-        <title>Dmitrii Dronov</title>
-        <link rel="stylesheet" 
-        href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" 
-        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" 
-        crossorigin="anonymous">
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" 
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" 
-        crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" 
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" 
-        crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" 
-        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" 
-        crossorigin="anonymous"></script>
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Roboto+Mono&display=swap" rel="stylesheet"> 
-    </head>
-    <body style="font-family: 'Montserrat', sans-serif;">
-        <div class="container">
-            <h1 style="margin-top: 5%;"><img src="https://avatars3.githubusercontent.com/u/55624814?s=460&u=e4c36df0a095b303193d859fcf13eea54f53f626&v=4" class="rounded-circle" height="100" width="100"> Dmitrii <strong>Dronov</strong></h1>
-            <hr style="color: black;">
-            <p>Chisinau&nbsp;MD-2020 | +373&nbsp;78&nbsp;475539 | dronov@nuton.org | GitHub:&nbsp;<a style="font-family: 'Roboto Mono', monospace;" href="https://github.com/BATK0VICH">BATK0VICH</a></p>
 
-            <br>
-            <h5><strong>SUMMARY</strong></h5>
-            <p>Software engineer with 1 year experience in C, C++ and Python. Still studying. Communucative person.<br></p>
+<head>
+    <meta charset="utf-8" lang="en">
+    <title>Dmitrii Dronov</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Roboto+Mono&display=swap" rel="stylesheet">
+</head>
 
-            <br>
-            <h5><strong>EDUCATION</strong></h5>
-            <h6>2017 — Until now</h6>
-            <p>Location: Moldova, Chisinau<br>CEEE (CENTRUL DE EXCELENȚĂ ÎN ENERGETICĂ ȘI ELECTRONICĂ)
-            <br>
-            61110 — CALCULATOARE</p>
-            <br>
+<body style="font-family: 'Montserrat', sans-serif;">
+    <div class="container">
+        <h1 style="margin-top: 5%;"><img src="https://avatars3.githubusercontent.com/u/55624814?s=460&u=e4c36df0a095b303193d859fcf13eea54f53f626&v=4" class="rounded-circle" height="100" width="100"> Dmitrii <strong>Dronov</strong></h1>
+        <hr style="color: black;">
+        <p>Chisinau&nbsp;MD-2020 | +373&nbsp;78&nbsp;475539 | dronov@nuton.org | GitHub:&nbsp;<a style="font-family: 'Roboto Mono', monospace;" href="https://github.com/BATK0VICH">BATK0VICH</a></p>
 
-            <h6>2020 - Until now</h6>
-            <p>Location: Moldova, Chisinau<br>TUM (Technical University of Moldova)
+        <br>
+        <h5><strong>SUMMARY</strong></h5>
+        <p>Software engineer with <b>2 years of experience</b> in C, C++ and Python.<br>
+            I have graduated from <b>college</b> and I'm still sudying in <b>univesity</b>. <br>
+            I'm a <b>communucative</b> person.<br>I always try to <b>help other people</b> and teach them, not just myself.</p>
+        <br>
+
+        <h5><strong>EDUCATION</strong></h5>
+        <h6>2017 — 2021</h6>
+        <p>Location: Moldova, Chisinau<br>CEEE (Center Of Excellence In Energetics And Electronics)
+            <br>
+            61110 — Computers
+        </p>
+        <br>
+
+        <h6>2020 - Until now</h6>
+        <p>Location: Moldova, Chisinau<br>TUM (Technical University of Moldova)
             <br>
             Information Technology
-            </p>
+        </p>
 
 
-            <br>
-            <h5><strong>LANGUAGES</strong></h5>
-            <h6>English</h6>
-            <p>Level: B2<br>TOEFL iBT score: 93<br></p>
-            <h6>Russian<br></h6>
-            <p>Native language<br></p>
-            <h6>Romanian</h6>
-            <p>Level: A1<br></p>
+        <br>
+        <h5><strong>LANGUAGES</strong></h5>
+        <h6>English</h6>
+        <p>Level: B2<br>TOEFL iBT score: 93<br></p>
+        <h6>Russian<br></h6>
+        <p>Native language<br></p>
+        <h6>Romanian</h6>
+        <p>Level: A1<br></p>
 
 
-            <br>
-            <h5><strong>EXPERIENCE</strong></h5>
-            <h6>2020 - Until now</h6>
-            <p>Location: Moldova, Chisinau<br>SmartSoftDev<br>Position - Software engineer</p>
-            
+        <br>
+        <h5><strong>EXPERIENCE</strong></h5>
+        <h6>July 2020 - December 2020</h6>
+        <p>Location: Moldova, Chisinau<br>SmartSoftDev<br>Position - Software engineer</p>
 
-            <br>
-            <h5><strong>SKILLS</strong></h5>
-            <h2><span class="badge badge-success">C</span> 
-                <span class="badge badge-success">C++ (Boost, OpenSSL, glog, nlohmann json)</span> 
-                <span class="badge badge-success">git</span></h2>
-            <h3><span class="badge badge-primary">🐍 Python3 (Django)</span> 
-                <span class="badge badge-primary">Go</span>
-                <span class="badge badge-warning">🐧 Linux</span></h3>
-            <h4><span class="badge badge-primary" style="background-color:teal">SQLite3</span></h4>
-            <h5><span class="badge badge-primary" style="background-color:burlywood">HTML</span> 
-                <span class="badge badge-primary" style="background-color:burlywood">CSS</span> 
-                <span class="badge badge-primary" style="background-color:burlywood">Bootstrap</span></h5>
-            <br>
-        </div>
-    </body>
+
+        <br>
+        <h5><strong>SKILLS</strong></h5>
+        <h2><span class="badge badge-success">C</span>
+            <span class="badge badge-success">C++ (STL, SDL, Boost, Asio, glog, Nlohmann/json, Meson)</span>
+            <span class="badge badge-success">git</span>
+        </h2>
+        <h3><span class="badge badge-primary">🐍 Python3 (Django, asyncio)</span>
+            <span class="badge badge-primary">Windows</span>
+            <span class="badge badge-warning">🐧 Linux</span>
+        </h3>
+        <h4><span class="badge badge-primary" style="background-color:teal">SQLite3</span>
+            <span class="badge badge-primary" style="background-color:teal">MongoDB</span>
+        </h4>
+        <h5><span class="badge badge-primary" style="background-color:burlywood">HTML</span>
+            <span class="badge badge-primary" style="background-color:burlywood">CSS</span>
+            <span class="badge badge-primary" style="background-color:burlywood">Bootstrap</span>
+        </h5>
+        <br>
+
+        <br>
+        <h5><strong>REFERENCES</strong></h5>
+        <table class="table">
+            <thead>
+                <tr>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row"></th>
+                    <td>
+                        <p>Gheorghe Stancov(Employer)<br>
+                            Team Leader<br>
+                            SmartSoftDev<br>
+                            +49 15775765758<br>
+                            Gs@smartsoftdev.eu</p>
+                    </td>
+                    <td>
+                        <p>Boris Delimarskii(Teacher)<br>
+                            Computer Architecture<br>
+                            Applied English<br>
+                            CEEE<br>
+                            del.work9@gmail.com</p>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</body>
+
 </html>
