Updated ru version

--- a/ru/index.html
+++ b/ru/index.html
@@ -1,73 +1,104 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" lang="en">
-        <title>Dmitrii Dronov</title>
-        <link rel="stylesheet" 
-        href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" 
-        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" 
-        crossorigin="anonymous">
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" 
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" 
-        crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" 
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" 
-        crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" 
-        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" 
-        crossorigin="anonymous"></script>
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Roboto+Mono&display=swap" rel="stylesheet"> 
-    </head>
-    <body style="font-family: 'Montserrat', sans-serif;">
-        <div class="container">
-            <h1 style="margin-top: 5%;"><img src="https://avatars3.githubusercontent.com/u/55624814?s=460&u=e4c36df0a095b303193d859fcf13eea54f53f626&v=4" class="rounded-circle" height="100" width="100"> Dmitrii <strong>Dronov</strong></h1>
-            <hr style="color: black;">
-            <p>Chisinau&nbsp;MD-2020 | +373&nbsp;78&nbsp;475539 | dronov@nuton.org | GitHub:&nbsp;<a style="font-family: 'Roboto Mono', monospace;" href="https://github.com/BATK0VICH">BATK0VICH</a></p>
 
-            <br>
-            <h5><strong>ОБО МНЕ</strong></h5>
-            <p>Разработчик программного обеспечения. Студент. Коммуникабельный.<br></p>
+<head>
+    <meta charset="utf-8" lang="en">
+    <title>Dmitrii Dronov</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Roboto+Mono&display=swap" rel="stylesheet">
+</head>
 
-            <br>
-            <h5><strong>ОБРАЗОВАНИЕ</strong></h5>
-            <h6>2017 — н.в.</h6>
-            <p>Moldova, Chisinau<br>CEEE (CENTRUL DE EXCELENȚĂ ÎN ENERGETICĂ ȘI ELECTRONICĂ)
-            <br>
-            61110 — CALCULATOARE</p>
+<body style="font-family: 'Montserrat', sans-serif;">
+    <div class="container">
+        <h1 style="margin-top: 5%;"><img src="https://avatars3.githubusercontent.com/u/55624814?s=460&u=e4c36df0a095b303193d859fcf13eea54f53f626&v=4" class="rounded-circle" height="100" width="100"> Dmitrii <strong>Dronov</strong></h1>
+        <hr style="color: black;">
+        <p>Chisinau&nbsp;MD-2020 | +373&nbsp;78&nbsp;475539 | dronov@nuton.org | GitHub:&nbsp;<a style="font-family: 'Roboto Mono', monospace;" href="https://github.com/BATK0VICH">BATK0VICH</a></p>
 
-            <h6>2020 - н.в.</h6>
-            <p>Moldova, Chisinau<br>UTM (Universitatea Tehnică a Moldovei)
-            <br>
-            Tehnologia Informației
-            </p>
+        <br>
+        <h5><strong>ОБО МНЕ</strong></h5>
+        <p>Разработчик программного обеспечения c <b>2 годами опыта</b> C, C++ и Python разработки.<br>
+            Я закончил <b>колледж</b> и всё еще обучаюсь в <b>университете</b>.<br>
+            Я <b>коммуникабельная</b> личность.<br>
+            Я всегда стараюсь <b>помогать другим людям</b> и обучать не только себя, но и их.<br></p>
 
-            <br>
-            <h5><strong>ЯЗЫКИ</strong></h5>
-            <h6>Английский</h6>
-            <p>Уровень: B2<br>TOEFL iBT балл: 93<br></p>
-            <h6>Русский<br></h6>
-            <p>Родной язык<br></p>
-            <h6>Румынский</h6>
-            <p>Уровень: A1<br></p>
+        <br>
+        <h5><strong>ОБРАЗОВАНИЕ</strong></h5>
+        <h6>2017 — 2021</h6>
+        <p>Moldova, Chisinau<br>
+            CEEE (Образовательный Центр Энергетики и Электроники)<br>
+            61110 — Calculatoare (Компьютеры)
+        </p>
+
+        <h6>2020 - н.в.</h6>
+        <p>Moldova, Chisinau<br>
+            TUM (Технологический Университет Молдовы)<br>
+            Информационные Технологии
+        </p>
+
+        <br>
+        <h5><strong>ЯЗЫКИ</strong></h5>
+        <h6>Английский</h6>
+        <p>Уровень: B2<br>TOEFL iBT балл: 93<br></p>
+        <h6>Русский<br></h6>
+        <p>Родной язык<br></p>
+        <h6>Румынский</h6>
+        <p>Уровень: A1<br></p><br>
 
 
-            <br>
-            <h5><strong>ОПЫТ</strong></h5>
-            <h6>2020 - н.в.</h6>
-            <p>Moldova, Chisinau<br>SmartSoftDev<br>Должность - Программный инженер</p>
+        <h5><strong>ОПЫТ</strong></h5>
+        <h6>Июль 2020 - Декабрь 2020</h6>
+        <p>Moldova, Chisinau<br>
+            SmartSoftDev<br>
+            Должность - Программный инженер</p><br>
 
-            <br>
-            <h5><strong>НАВЫКИ</strong></h5>
-            <h2><span class="badge badge-success">C</span> 
-                <span class="badge badge-success">C++ (Boost, OpenSSL, glog, nlohmann json)</span> 
-                <span class="badge badge-success">git</span></h2>
-            <h3><span class="badge badge-primary">🐍 Python3 (Django)</span> 
-                <span class="badge badge-primary">Go</span>
-                <span class="badge badge-warning">🐧 Linux</span></h3>
-            <h4><span class="badge badge-primary" style="background-color:teal">SQLite3</span></h4>
-            <h5><span class="badge badge-primary" style="background-color:burlywood">HTML</span> 
-                <span class="badge badge-primary" style="background-color:burlywood">CSS</span> 
-                <span class="badge badge-primary" style="background-color:burlywood">Bootstrap</span></h5>
-        </div>
-    </body>
+        <h5><strong>НАВЫКИ</strong></h5>
+        <h2><span class="badge badge-success">C</span>
+            <span class="badge badge-success">C++ (STL, SDL, Boost, Asio, glog, Nlohmann/json, Meson)</span>
+            <span class="badge badge-success">git</span>
+        </h2>
+        <h3><span class="badge badge-primary">🐍 Python3 (Django, asyncio)</span>
+            <span class="badge badge-primary">Windows</span>
+            <span class="badge badge-warning">🐧 Linux</span>
+        </h3>
+        <h4><span class="badge badge-primary" style="background-color:teal">SQLite3</span>
+            <span class="badge badge-primary" style="background-color:teal">MongoDB</span>
+        </h4>
+        <h5><span class="badge badge-primary" style="background-color:burlywood">HTML</span>
+            <span class="badge badge-primary" style="background-color:burlywood">CSS</span>
+            <span class="badge badge-primary" style="background-color:burlywood">Bootstrap</span>
+        </h5>
+        <br>
+
+        <h5><strong>РЕКОМЕНДАЦИИ</strong></h5>
+        <table class="table">
+            <thead>
+                <tr>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row"></th>
+                    <td>
+                        <p>Gheorghe Stancov(Работодатель)<br>
+                            Team Leader<br>
+                            SmartSoftDev<br>
+                            +49 15775765758<br>
+                            Gs@smartsoftdev.eu</p>
+                    </td>
+                    <td>
+                        <p>Boris Delimarskii(Преподователь)<br>
+                            Computer Architecture<br>
+                            Applied English<br>
+                            CEEE<br>
+                            del.work9@gmail.com</p>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</body>
+
 </html>
