--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <br>
         <h5><strong>SUMMARY</strong></h5>
         <p>Software engineer with <b>2 years of experience</b> in C, C++ and Python.<br>
-            I have graduated from <b>college</b> and I'm still sudying in <b>univesity</b>. <br>
-            I'm a <b>communucative</b> person.<br>I always try to <b>help other people</b> and teach them, not just myself.</p>
+            I'm a <b>communucative</b> person.<br>
+            I always try to <b>help other people</b> and teach them, not just myself.</p>
         <br>
 
         <h5><strong>EDUCATION</strong></h5>
