--- a/ru/404.html
+++ b/ru/404.html
@@ -20,9 +20,8 @@
         <br>
         <h5><strong>ОБО МНЕ</strong></h5>
         <p>Разработчик программного обеспечения c <b>2 годами опыта</b> C, C++ и Python разработки.<br>
-            Я закончил <b>колледж</b> и всё еще обучаюсь в <b>университете</b>.<br>
-            Я <b>коммуникабельная</b> личность.<br>
-            Я всегда стараюсь <b>помогать другим людям</b> и обучать не только себя, но и их.<br></p>
+            <b>Коммуникабельная</b> личность.<br>
+            Стараюсь <b>помогать другим людям</b> и обучать не только себя, но и их.<br></p>
 
         <br>
         <h5><strong>ОБРАЗОВАНИЕ</strong></h5>
