--- a/ru/index.html
+++ b/ru/index.html
@@ -19,7 +19,7 @@
 
         <br>
         <h5><strong>ОБО МНЕ</strong></h5>
-        <p>Разработчик программного обеспечения c <b>2 годами опыта</b> C, C++ и Python разработки.<br>
+        <p><b>2 года опыта</b> разработки программного обеспечения на C, C++ и Python.<br>
             <b>Коммуникабельная</b> личность.<br>
             Стараюсь <b>помогать другим людям</b> и обучать не только себя, но и их.<br></p>
 
