Added new experience

--- a/ru/index.html
+++ b/ru/index.html
@@ -48,10 +48,45 @@
 
 
         <h5><strong>ОПЫТ</strong></h5>
-        <h6>Июль 2020 - Декабрь 2020</h6>
-        <p>Moldova, Chisinau<br>
-            SmartSoftDev<br>
-            Должность - Программный инженер</p><br>
+        <div class="row">
+            <div class="col">
+                <h6>July 2020 - December 2020</h6>
+                <p>Moldova, Chisinau
+                    <br>
+                    SmartSoftDev
+                    <br>
+                    Должность - Разработчик программного обеспечения
+                    <br>
+                    Описание: 3 месяца я работал C++ разработчиком.
+                    Моя задача заключалась в том, чтобы перевести Python приложения на C++.
+                    Позже я работал Python разработчиком на протяжении следующих 3-х месяцев.
+                    Практически каждая задача была связана с сетевым программированием.
+                </p>
+            </div>
+            <div class="col">
+                <h6>May 2021 - June 2021</h6>
+                <p>Moldova, Chisinau
+                    <br>
+                    Electroglob
+                    <br>
+                    Должность - Front-end веб разработчик
+                    <br>
+                    Описание: Стажировка от колледжа. Моя задача заключалась в том,
+                    чтобы сделать статический веб-сайт, который я буду использовать
+                    для дипломного проекта. 
+                    Проект может быть найден тут: <a href="https://electroglob.org/">electroglob.org</a> 
+                </p>
+            </div>
+            <div class="col">
+                <h6>August 2021 - Until now</h6>
+                <p>Moldova, Chisinau
+                    <br>
+                    Mekanys
+                    <br>
+                    Должность - Разработчик Salesforce
+                </p>
+            </div>
+        </div>
 
         <h5><strong>НАВЫКИ</strong></h5>
         <h2><span class="badge badge-success">C</span>
