--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <br>
         <h5><strong>EXPERIENCE</strong></h5>
         <div class="row">
-            <div class="col">
+            <div class="col-lg-4">
                 <h6>July 2020 - December 2020</h6>
                 <p>Location: Moldova, Chisinau
                     <br>
@@ -66,7 +66,7 @@
                     Almost every task was network programming.
                 </p>
             </div>
-            <div class="col">
+            <div class="col-lg-4">
                 <h6>May 2021 - June 2021</h6>
                 <p>Location: Moldova, Chisinau
                     <br>
@@ -78,7 +78,7 @@
                     static web-site for diploma project. This project can be found at: <a href="https://electroglob.org/">electroglob.org</a> 
                 </p>
             </div>
-            <div class="col">
+            <div class="col-lg-4">
                 <h6>August 2021 - Until now</h6>
                 <p>Location: Moldova, Chisinau
                     <br>
