--- a/ru/index.html
+++ b/ru/index.html
@@ -49,7 +49,7 @@
 
         <h5><strong>ОПЫТ</strong></h5>
         <div class="row">
-            <div class="col">
+            <div class="col-lg-4">
                 <h6>July 2020 - December 2020</h6>
                 <p>Moldova, Chisinau
                     <br>
@@ -63,7 +63,7 @@
                     Практически каждая задача была связана с сетевым программированием.
                 </p>
             </div>
-            <div class="col">
+            <div class="col-lg-4">
                 <h6>May 2021 - June 2021</h6>
                 <p>Moldova, Chisinau
                     <br>
@@ -77,7 +77,7 @@
                     Проект может быть найден тут: <a href="https://electroglob.org/">electroglob.org</a> 
                 </p>
             </div>
-            <div class="col">
+            <div class="col-lg-4">
                 <h6>August 2021 - Until now</h6>
                 <p>Moldova, Chisinau
                     <br>
