Added stylesheet, changed and added links

--- a/404.html
+++ b/404.html
@@ -9,19 +9,27 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Roboto+Mono&display=swap" rel="stylesheet">
+    <link href="./style.css" rel="stylesheet">
 </head>
 
 <body style="font-family: 'Montserrat', sans-serif;">
     <div class="container">
         <h1 style="margin-top: 5%;"><img src="https://avatars3.githubusercontent.com/u/55624814?s=460&u=e4c36df0a095b303193d859fcf13eea54f53f626&v=4" class="rounded-circle" height="100" width="100"> Dmitrii <strong>Dronov</strong></h1>
         <hr style="color: black;">
-        <p>Chisinau&nbsp;MD-2020 | +373&nbsp;78&nbsp;475539 | dronov@nuton.org | GitHub:&nbsp;<a style="font-family: 'Roboto Mono', monospace;" href="https://github.com/BATK0VICH">BATK0VICH</a></p>
+        <p>
+            Chisinau&nbsp;MD-2020 | 
+            <a class="link" href="tel:+373-78-47-55-39">+373&nbsp;78&nbsp;475539</a> | 
+            <a class="link" href="mailto:dronov@nuton.org">dronov@nuton.org</a> | 
+            GitHub:&nbsp;<a class="link" href="https://github.com/BATK0VICH">BATK0VICH</a> |
+            LinkedIn: <a class="link" href="https://www.linkedin.com/in/dmitrii-dronov/">Dmitrii Dronov</a> |
+            CodeWars: <a class="link" href="https://www.codewars.com/users/BATK0VICH">BATK0VICH</a>
+        </p>
 
         <br>
         <h5><strong>SUMMARY</strong></h5>
         <p>Software engineer with <b>2 years of experience</b> in C, C++ and Python.<br>
-            I have graduated from <b>college</b> and I'm still sudying in <b>univesity</b>. <br>
-            I'm a <b>communucative</b> person.<br>I always try to <b>help other people</b> and teach them, not just myself.</p>
+            I'm a <b>communucative</b> person.<br>
+            I always try to <b>help other people</b> and teach them, not just myself.</p>
         <br>
 
         <h5><strong>EDUCATION</strong></h5>
@@ -51,9 +59,45 @@
 
         <br>
         <h5><strong>EXPERIENCE</strong></h5>
-        <h6>July 2020 - December 2020</h6>
-        <p>Location: Moldova, Chisinau<br>SmartSoftDev<br>Position - Software engineer</p>
-
+        <div class="row">
+            <div class="col-lg-4">
+                <h6>July 2020 - December 2020</h6>
+                <p>Location: Moldova, Chisinau
+                    <br>
+                    SmartSoftDev
+                    <br>
+                    Position - Software developer
+                    <br>
+                    Description: 3 months I have worked as a C++ software developer.
+                    My task was to translate a Python application into C++.
+                    Later I have worked as a Python developer for another 3 months.
+                    Almost every task was network programming.
+                </p>
+            </div>
+            <div class="col-lg-4">
+                <h6>May 2021 - June 2021</h6>
+                <p>Location: Moldova, Chisinau
+                    <br>
+                    Electroglob
+                    <br>
+                    Position - Front-end Web Developer
+                    <br>
+                    Description: College internship. My task was to create a
+                    static web-site for diploma project. 
+                    This project can be found at: 
+                    <a class="link" href="https://electroglob.org/">electroglob.org</a> 
+                </p>
+            </div>
+            <div class="col-lg-4">
+                <h6>August 2021 - Until now</h6>
+                <p>Location: Moldova, Chisinau
+                    <br>
+                    Mekanys
+                    <br>
+                    Position - Salesforce developer
+                </p>
+            </div>
+        </div>
 
         <br>
         <h5><strong>SKILLS</strong></h5>
