--- a/ru/404.html
+++ b/ru/404.html
@@ -15,8 +15,15 @@
     <div class="container">
         <h1 style="margin-top: 5%;"><img src="https://avatars3.githubusercontent.com/u/55624814?s=460&u=e4c36df0a095b303193d859fcf13eea54f53f626&v=4" class="rounded-circle" height="100" width="100"> Dmitrii <strong>Dronov</strong></h1>
         <hr style="color: black;">
-        <p>Chisinau&nbsp;MD-2020 | +373&nbsp;78&nbsp;475539 | dronov@nuton.org | GitHub:&nbsp;<a style="font-family: 'Roboto Mono', monospace;" href="https://github.com/BATK0VICH">BATK0VICH</a></p>
-
+        <p>
+            Chisinau&nbsp;MD-2020 | 
+            <a class="link" href="tel:+373-78-47-55-39">+373&nbsp;78&nbsp;475539</a> | 
+            <a class="link" href="mailto:dronov@nuton.org">dronov@nuton.org</a> | 
+            GitHub:&nbsp;<a class="link" href="https://github.com/BATK0VICH">BATK0VICH</a> |
+            LinkedIn: <a class="link" href="https://www.linkedin.com/in/dmitrii-dronov/">Dmitrii Dronov</a> |
+            CodeWars: <a class="link" href="https://www.codewars.com/users/BATK0VICH">BATK0VICH</a>
+        </p>
+        
         <br>
         <h5><strong>ОБО МНЕ</strong></h5>
         <p><b>2 года опыта</b> разработки программного обеспечения на C, C++ и Python.<br>
@@ -48,10 +55,45 @@
 
 
         <h5><strong>ОПЫТ</strong></h5>
-        <h6>Июль 2020 - Декабрь 2020</h6>
-        <p>Moldova, Chisinau<br>
-            SmartSoftDev<br>
-            Должность - Программный инженер</p><br>
+        <div class="row">
+            <div class="col-lg-4">
+                <h6>July 2020 - December 2020</h6>
+                <p>Moldova, Chisinau
+                    <br>
+                    SmartSoftDev
+                    <br>
+                    Должность - Разработчик программного обеспечения
+                    <br>
+                    Описание: 3 месяца я работал C++ разработчиком.
+                    Моя задача заключалась в том, чтобы перевести Python приложения на C++.
+                    Позже я работал Python разработчиком на протяжении следующих 3-х месяцев.
+                    Практически каждая задача была связана с сетевым программированием.
+                </p>
+            </div>
+            <div class="col-lg-4">
+                <h6>May 2021 - June 2021</h6>
+                <p>Moldova, Chisinau
+                    <br>
+                    Electroglob
+                    <br>
+                    Должность - Front-end веб разработчик
+                    <br>
+                    Описание: Стажировка от колледжа. Моя задача заключалась в том,
+                    чтобы сделать статический веб-сайт, который я буду использовать
+                    для дипломного проекта. 
+                    Проект может быть найден тут: <a href="https://electroglob.org/">electroglob.org</a> 
+                </p>
+            </div>
+            <div class="col-lg-4">
+                <h6>August 2021 - Until now</h6>
+                <p>Moldova, Chisinau
+                    <br>
+                    Mekanys
+                    <br>
+                    Должность - Разработчик Salesforce
+                </p>
+            </div>
+        </div>
 
         <h5><strong>НАВЫКИ</strong></h5>
         <h2><span class="badge badge-success">C</span>
