--- a/ru/index.html
+++ b/ru/index.html
@@ -15,8 +15,15 @@
     <div class="container">
         <h1 style="margin-top: 5%;"><img src="https://avatars3.githubusercontent.com/u/55624814?s=460&u=e4c36df0a095b303193d859fcf13eea54f53f626&v=4" class="rounded-circle" height="100" width="100"> Dmitrii <strong>Dronov</strong></h1>
         <hr style="color: black;">
-        <p>Chisinau&nbsp;MD-2020 | +373&nbsp;78&nbsp;475539 | dronov@nuton.org | GitHub:&nbsp;<a style="font-family: 'Roboto Mono', monospace;" href="https://github.com/BATK0VICH">BATK0VICH</a></p>
-
+        <p>
+            Chisinau&nbsp;MD-2020 | 
+            <a class="link" href="tel:+373-78-47-55-39">+373&nbsp;78&nbsp;475539</a> | 
+            <a class="link" href="mailto:dronov@nuton.org">dronov@nuton.org</a> | 
+            GitHub:&nbsp;<a class="link" href="https://github.com/BATK0VICH">BATK0VICH</a> |
+            LinkedIn: <a class="link" href="https://www.linkedin.com/in/dmitrii-dronov/">Dmitrii Dronov</a> |
+            CodeWars: <a class="link" href="https://www.codewars.com/users/BATK0VICH">BATK0VICH</a>
+        </p>
+        
         <br>
         <h5><strong>ОБО МНЕ</strong></h5>
         <p><b>2 года опыта</b> разработки программного обеспечения на C, C++ и Python.<br>
