--- a/index.html
+++ b/index.html
@@ -9,13 +9,21 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Roboto+Mono&display=swap" rel="stylesheet">
+    <link href="./style.css" rel="stylesheet">
 </head>
 
 <body style="font-family: 'Montserrat', sans-serif;">
     <div class="container">
         <h1 style="margin-top: 5%;"><img src="https://avatars3.githubusercontent.com/u/55624814?s=460&u=e4c36df0a095b303193d859fcf13eea54f53f626&v=4" class="rounded-circle" height="100" width="100"> Dmitrii <strong>Dronov</strong></h1>
         <hr style="color: black;">
-        <p>Chisinau&nbsp;MD-2020 | +373&nbsp;78&nbsp;475539 | dronov@nuton.org | GitHub:&nbsp;<a style="font-family: 'Roboto Mono', monospace;" href="https://github.com/BATK0VICH">BATK0VICH</a></p>
+        <p>
+            Chisinau&nbsp;MD-2020 | 
+            <a class="link" href="tel:+373-78-47-55-39">+373&nbsp;78&nbsp;475539</a> | 
+            <a class="link" href="mailto:dronov@nuton.org">dronov@nuton.org</a> | 
+            GitHub:&nbsp;<a class="link" href="https://github.com/BATK0VICH">BATK0VICH</a> |
+            LinkedIn: <a class="link" href="https://www.linkedin.com/in/dmitrii-dronov/">Dmitrii Dronov</a> |
+            CodeWars: <a class="link" href="https://www.codewars.com/users/BATK0VICH">BATK0VICH</a>
+        </p>
 
         <br>
         <h5><strong>SUMMARY</strong></h5>
@@ -75,7 +83,9 @@
                     Position - Front-end Web Developer
                     <br>
                     Description: College internship. My task was to create a
-                    static web-site for diploma project. This project can be found at: <a href="https://electroglob.org/">electroglob.org</a> 
+                    static web-site for diploma project. 
+                    This project can be found at: 
+                    <a class="link" href="https://electroglob.org/">electroglob.org</a> 
                 </p>
             </div>
             <div class="col-lg-4">
