Added bootstrap grid to the education and languages

--- a/404.html
+++ b/404.html
@@ -49,12 +49,20 @@
 
         <br>
         <h5><strong>LANGUAGES</strong></h5>
-        <h6>English</h6>
-        <p>Level: B2<br>TOEFL iBT score: 93<br></p>
-        <h6>Russian<br></h6>
-        <p>Native language<br></p>
-        <h6>Romanian</h6>
-        <p>Level: A1<br></p>
+        <div class="row">
+            <div class="col-lg-4">
+                <h6>English</h6>
+                <p>Level: B2<br>TOEFL iBT score: 93<br></p>
+            </div>
+            <div class="col-lg-4">
+                <h6>Russian<br></h6>
+                <p>Native language<br></p>
+            </div>
+            <div class="col-lg-4">
+                <h6>Romanian</h6>
+                <p>Level: A3<br></p>
+            </div>
+        </div>
 
 
         <br>
