--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 
 <body style="font-family: 'Montserrat', sans-serif;">
     <div class="container">
-        <h1 style="margin-top: 5%;"><img src="https://avatars3.githubusercontent.com/u/55624814?s=460&u=e4c36df0a095b303193d859fcf13eea54f53f626&v=4" class="rounded-circle" height="100" width="100"> Dmitrii <strong>Dronov</strong></h1>
+        <h1 style="margin-top: 5%;">
+            <img src="https://avatars3.githubusercontent.com/u/55624814?s=460&u=e4c36df0a095b303193d859fcf13eea54f53f626&v=4" class="rounded-circle" height="100" width="100"> 
+            Dmitrii <strong>Dronov</strong>
+        </h1>
         <hr style="color: black;">
         <p>
             Chisinau&nbsp;MD-2020 | 
@@ -33,28 +36,46 @@
         <br>
 
         <h5><strong>EDUCATION</strong></h5>
-        <h6>2017 — 2021</h6>
-        <p>Location: Moldova, Chisinau<br>CEEE (Center Of Excellence In Energetics And Electronics)
-            <br>
-            61110 — Computers
-        </p>
-        <br>
-
-        <h6>2020 - Until now</h6>
-        <p>Location: Moldova, Chisinau<br>TUM (Technical University of Moldova)
-            <br>
-            Information Technology
-        </p>
+        <div class="row">
+            <div class="col-lg-6">
+                <h6>2017 — 2021</h6>
+                <p>
+                    Location: Moldova, Chisinau
+                    <br>
+                    CEEE (Center Of Excellence In Energetics And Electronics)
+                    <br>
+                    61110 — Computers
+                </p>
+            </div>
+            <div class="col-lg-6">
+                <h6>2020 - Until now</h6>
+                <p>
+                    Location: Moldova, Chisinau
+                    <br>
+                    TUM (Technical University of Moldova)
+                    <br>
+                    Information Technology
+                </p>
+            </div>
+        </div>
 
 
         <br>
         <h5><strong>LANGUAGES</strong></h5>
-        <h6>English</h6>
-        <p>Level: B2<br>TOEFL iBT score: 93<br></p>
-        <h6>Russian<br></h6>
-        <p>Native language<br></p>
-        <h6>Romanian</h6>
-        <p>Level: A1<br></p>
+        <div class="row">
+            <div class="col-lg-4">
+                <h6>English</h6>
+                <p>Level: B2<br>TOEFL iBT score: 93<br></p>
+            </div>
+            <div class="col-lg-4">
+                <h6>Russian<br></h6>
+                <p>Native language<br></p>
+            </div>
+            <div class="col-lg-4">
+                <h6>Romanian</h6>
+                <p>Level: A3<br></p>
+            </div>
+        </div>
 
 
         <br>
