--- a/ru/404.html
+++ b/ru/404.html
@@ -32,26 +32,45 @@
 
         <br>
         <h5><strong>ОБРАЗОВАНИЕ</strong></h5>
-        <h6>2017 — 2021</h6>
-        <p>Moldova, Chisinau<br>
-            CEEE (Образовательный Центр Энергетики и Электроники)<br>
-            61110 — Calculatoare (Компьютеры)
-        </p>
-
-        <h6>2020 - н.в.</h6>
-        <p>Moldova, Chisinau<br>
-            TUM (Технологический Университет Молдовы)<br>
-            Информационные Технологии
-        </p>
+        <dev class="row">
+            <dev class="col-lg-6">
+                <h6>2017 — 2021</h6>
+            <p>
+                Moldova, Chisinau
+                <br>
+                CEEE (Образовательный Центр Энергетики и Электроники)
+                <br>
+                61110 — Calculatoare (Компьютеры)
+            </p>
+            </dev>
+            <dev class="col-lg-6">
+                <h6>2020 - н.в.</h6>
+                <p>
+                    Moldova, Chisinau
+                    <br>
+                    TUM (Технологический Университет Молдовы)
+                    <br>
+                    Информационные Технологии
+            </p>
+            </dev>
+        </dev>
 
         <br>
         <h5><strong>ЯЗЫКИ</strong></h5>
-        <h6>Английский</h6>
-        <p>Уровень: B2<br>TOEFL iBT балл: 93<br></p>
-        <h6>Русский<br></h6>
-        <p>Родной язык<br></p>
-        <h6>Румынский</h6>
-        <p>Уровень: A1<br></p><br>
+        <dev class="row">
+            <dev class="col-lg-4">
+                <h6>Английский</h6>
+                <p>Уровень: B2<br>TOEFL iBT балл: 93<br></p>
+            </dev>
+            <dev class="col-lg-4">
+                <h6>Русский<br></h6>
+                <p>Родной язык<br></p>
+            </dev>
+            <dev class="col-lg-4">
+                <h6>Румынский</h6>
+                <p>Уровень: A3<br></p><br>
+            </dev>
+        </dev>
 
 
         <h5><strong>ОПЫТ</strong></h5>
