Added new skills

--- a/404.html
+++ b/404.html
@@ -114,17 +114,19 @@
             <span class="badge badge-success">git</span>
         </h2>
         <h3><span class="badge badge-primary">🐍 Python3 (Django, asyncio)</span>
+            <span class="badge badge-primary">Salesforce(Apex, SOQL, SOSL)</span>
             <span class="badge badge-primary">Windows</span>
             <span class="badge badge-warning">🐧 Linux</span>
         </h3>
-        <h4><span class="badge badge-primary" style="background-color:teal">SQLite3</span>
+        <h4>
+            <span class="badge badge-primary" style="background-color:teal">SQL</span>
+            <span class="badge badge-primary" style="background-color:teal">SQLite3</span>
             <span class="badge badge-primary" style="background-color:teal">MongoDB</span>
         </h4>
         <h5><span class="badge badge-primary" style="background-color:burlywood">HTML</span>
             <span class="badge badge-primary" style="background-color:burlywood">CSS</span>
             <span class="badge badge-primary" style="background-color:burlywood">Bootstrap</span>
         </h5>
-        <br>
     </div>
 </body>
 
