Tested and fixed issues

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <br>
         <h5><strong>SUMMARY</strong></h5>
         <p>Software engineer with <b>2 years of experience</b> in C, C++ and Python.<br>
-            I'm a <b>communucative</b> person.<br>
+            I'm a <b>communicative</b> person.<br>
             I always try to <b>help other people</b> and teach them, not just myself.</p>
         <br>
 
@@ -42,7 +42,7 @@
                 <p>
                     Location: Moldova, Chisinau
                     <br>
-                    CEEE (Center Of Excellence In Energetics And Electronics)
+                    CEEE (Center of Excellence in Energetics and Electronics)
                     <br>
                     61110 — Computers
                 </p>
