--- a/ru/index.html
+++ b/ru/index.html
@@ -9,6 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Roboto+Mono&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body style="font-family: 'Montserrat', sans-serif;">
@@ -100,7 +101,7 @@
                     Описание: Стажировка от колледжа. Моя задача заключалась в том,
                     чтобы сделать статический веб-сайт, который я буду использовать
                     для дипломного проекта. 
-                    Проект может быть найден тут: <a href="https://electroglob.org/">electroglob.org</a> 
+                    Проект может быть найден тут: <a class="link" href="https://electroglob.org/">electroglob.org</a> 
                 </p>
             </div>
             <div class="col-lg-4">
